Fix alignment of show hidden button

--- a/packages/cells/style/widget.css
+++ b/packages/cells/style/widget.css
@@ -103,7 +103,8 @@
 }
 
 .jp-showHiddenCellsButton {
-  margin-left: var(--jp-cell-prompt-width);
+  margin-left: calc(var(--jp-cell-prompt-width) + 2 * var(--jp-code-padding));
+  margin-top: var(--jp-code-padding);
   border: 1px solid var(--jp-border-color2);
   background-color: var(--jp-border-color3) !important;
   color: var(--jp-content-font-color0) !important;
